crates/snow-parser/tests/snapshots/parser_tests__pipe_with_calls.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"data |> map(f) |> filter(g)\")"
---
SOURCE_FILE@0..23
  PIPE_EXPR@0..23
    PIPE_EXPR@0..12
      NAME_REF@0..4
        IDENT@0..4 "data"
      PIPE@4..6 "|>"
      CALL_EXPR@6..12
        NAME_REF@6..9
          IDENT@6..9 "map"
        ARG_LIST@9..12
          L_PAREN@9..10 "("
          NAME_REF@10..11
            IDENT@10..11 "f"
          R_PAREN@11..12 ")"
    PIPE@12..14 "|>"
    CALL_EXPR@14..23
      NAME_REF@14..20
        IDENT@14..20 "filter"
      ARG_LIST@20..23
        L_PAREN@20..21 "("
        NAME_REF@21..22
          IDENT@21..22 "g"
        R_PAREN@22..23 ")"
  EOF@23..23 ""
