crates/snow-parser/tests/snapshots/parser_tests__precedence_chain.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"1 + 2 * 3 - 4 / 2\")"
---
SOURCE_FILE@0..9
  BINARY_EXPR@0..9
    BINARY_EXPR@0..5
      LITERAL@0..1
        INT_LITERAL@0..1 "1"
      PLUS@1..2 "+"
      BINARY_EXPR@2..5
        LITERAL@2..3
          INT_LITERAL@2..3 "2"
        STAR@3..4 "*"
        LITERAL@4..5
          INT_LITERAL@4..5 "3"
    MINUS@5..6 "-"
    BINARY_EXPR@6..9
      LITERAL@6..7
        INT_LITERAL@6..7 "4"
      SLASH@7..8 "/"
      LITERAL@8..9
        INT_LITERAL@8..9 "2"
  EOF@9..9 ""
