crates/snow-parser/tests/snapshots/parser_tests__receive_expr_multiple_arms.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"receive do\\n  1 -> 10\\n  2 -> 20\\nend\")"
---
SOURCE_FILE@0..25
  RECEIVE_EXPR@0..25
    RECEIVE_KW@0..7 "receive"
    DO_KW@7..9 "do"
    NEWLINE@9..10 "\n"
    RECEIVE_ARM@10..15
      LITERAL_PAT@10..11
        INT_LITERAL@10..11 "1"
      ARROW@11..13 "->"
      LITERAL@13..15
        INT_LITERAL@13..15 "10"
    NEWLINE@15..16 "\n"
    RECEIVE_ARM@16..21
      LITERAL_PAT@16..17
        INT_LITERAL@16..17 "2"
      ARROW@17..19 "->"
      LITERAL@19..21
        INT_LITERAL@19..21 "20"
    NEWLINE@21..22 "\n"
    END_KW@22..25 "end"
  EOF@25..25 ""
