crates/snow-parser/tests/snapshots/parser_tests__receive_expr_single_arm.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"receive do\\n  x -> x\\nend\")"
---
SOURCE_FILE@0..18
  RECEIVE_EXPR@0..18
    RECEIVE_KW@0..7 "receive"
    DO_KW@7..9 "do"
    NEWLINE@9..10 "\n"
    RECEIVE_ARM@10..14
      IDENT_PAT@10..11
        IDENT@10..11 "x"
      ARROW@11..13 "->"
      NAME_REF@13..14
        IDENT@13..14 "x"
    NEWLINE@14..15 "\n"
    END_KW@15..18 "end"
  EOF@18..18 ""
