crates/snow-parser/tests/snapshots/parser_tests__receive_expr_with_after.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"receive do\\n  x -> x\\nafter 5000 -> 0\\nend\")"
---
SOURCE_FILE@0..31
  RECEIVE_EXPR@0..27
    RECEIVE_KW@0..7 "receive"
    DO_KW@7..9 "do"
    NEWLINE@9..10 "\n"
    RECEIVE_ARM@10..14
      IDENT_PAT@10..11
        IDENT@10..11 "x"
      ARROW@11..13 "->"
      NAME_REF@13..14
        IDENT@13..14 "x"
    NEWLINE@14..15 "\n"
    AFTER_CLAUSE@15..27
      AFTER_KW@15..20 "after"
      LITERAL@20..24
        INT_LITERAL@20..24 "5000"
      ARROW@24..26 "->"
      LITERAL@26..27
        INT_LITERAL@26..27 "0"
  NEWLINE@27..28 "\n"
  END_KW@28..31 "end"
  EOF@31..31 ""

errors:
  - expected `end` to close `receive` block @35..36
