crates/snow-parser/tests/snapshots/parser_tests__result_sugar_in_type.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"fn bar(x :: String!Error) do\\n  x\\nend\")"
---
SOURCE_FILE@0..30
  FN_DEF@0..30
    FN_KW@0..2 "fn"
    NAME@2..5
      IDENT@2..5 "bar"
    PARAM_LIST@5..22
      L_PAREN@5..6 "("
      PARAM@6..21
        IDENT@6..7 "x"
        TYPE_ANNOTATION@7..21
          COLON_COLON@7..9 "::"
          IDENT@9..15 "String"
          BANG@15..16 "!"
          IDENT@16..21 "Error"
      R_PAREN@21..22 ")"
    DO_KW@22..24 "do"
    BLOCK@24..27
      NEWLINE@24..25 "\n"
      NAME_REF@25..26
        IDENT@25..26 "x"
      NEWLINE@26..27 "\n"
    END_KW@27..30 "end"
  EOF@30..30 ""
