crates/snow-parser/tests/snapshots/parser_tests__return_with_expr.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "block_and_debug(\"return x + 1\")"
---
SOURCE_FILE@0..9
  BLOCK@0..9
    RETURN_EXPR@0..9
      RETURN_KW@0..6 "return"
      BINARY_EXPR@6..9
        NAME_REF@6..7
          IDENT@6..7 "x"
        PLUS@7..8 "+"
        LITERAL@8..9
          INT_LITERAL@8..9 "1"
  EOF@9..9 ""
