crates/snow-parser/tests/snapshots/parser_tests__return_with_value.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "block_and_debug(\"return x\")"
---
SOURCE_FILE@0..7
  BLOCK@0..7
    RETURN_EXPR@0..7
      RETURN_KW@0..6 "return"
      NAME_REF@6..7
        IDENT@6..7 "x"
  EOF@7..7 ""
