crates/snow-parser/tests/snapshots/parser_tests__send_expr_simple.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"send(pid, 42)\")"
---
SOURCE_FILE@0..12
  SEND_EXPR@0..12
    SEND_KW@0..4 "send"
    ARG_LIST@4..12
      L_PAREN@4..5 "("
      NAME_REF@5..8
        IDENT@5..8 "pid"
      COMMA@8..9 ","
      LITERAL@9..11
        INT_LITERAL@9..11 "42"
      R_PAREN@11..12 ")"
  EOF@12..12 ""
